# filament

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  PLAN.md  PLAN_RTC.md  PLAN_UX.md  README.md  cargo-deny.toml  fix_tests.js  fix_tests2.js
.github/workflows/: automation-lint.yml  ci.yml  codeql.yml  security.yml
apps/filament-client-desktop/: security-policy.json  (+1 more)
apps/filament-server/: Cargo.toml  Dockerfile
apps/filament-server/data/attachments/avatars/: 01KJ8QGV7SN6P6QQGMSPWEVP1S
apps/filament-server/src/: lib.rs  main.rs
apps/filament-server/src/server/: README.md  auth.rs  auth_repository.rs  core.rs  db.rs  directory_contract.rs  domain.rs  errors.rs  gateway_events.rs  handlers.rs  metrics.rs  mod.rs  permissions.rs  realtime.rs  router.rs  tests.rs  types.rs
apps/filament-server/src/server/db/migrations/: mod.rs  v10_role_color_schema.rs  v11_profile_banner_schema.rs  v1_hierarchical_permissions.rs  v2_attachment_schema.rs  v3_social_graph_schema.rs  v4_moderation_audit_schema.rs  v5_identity_schema.rs  v6_workspace_schema.rs  v7_message_schema.rs  v8_permission_legacy_schema.rs  v9_default_join_role_schema.rs
apps/filament-server/src/server/domain/: attachments.rs  moderation.rs  permissions_eval.rs  reactions.rs
apps/filament-server/src/server/gateway_events/: connection.rs  envelope.rs  friend.rs  message_channel.rs  presence_voice.rs  profile.rs  workspace.rs
apps/filament-server/src/server/handlers/: auth.rs  friends.rs  guilds.rs  media.rs  messages.rs  mod.rs  profile.rs  search.rs
apps/filament-server/src/server/realtime/: connection_control.rs  connection_disconnect_followups.rs  connection_registry.rs  connection_runtime.rs  connection_subscriptions.rs  emit_metrics.rs  fanout_channel.rs  fanout_dispatch.rs  fanout_guild.rs  fanout_user.rs  fanout_user_targets.rs  hydration_db.rs  hydration_in_memory.rs  hydration_in_memory_attachments.rs  hydration_merge.rs  hydration_order.rs  hydration_runtime.rs  ingress_command.rs  ingress_message.rs  ingress_message_create.rs  ingress_parse.rs  ingress_rate_limit.rs  ingress_subscribe.rs  livekit_sync.rs  message_attachment_bind.rs  message_create_response.rs  message_emit.rs  message_prepare.rs  message_record.rs  message_store_in_memory.rs  presence_disconnect.rs  presence_disconnect_events.rs  presence_subscribe.rs  presence_subscribe_events.rs  presence_sync_dispatch.rs  ready_enqueue.rs  search_apply.rs  search_apply_batch.rs  search_batch_drain.rs  search_blocking.rs  (+28 more)
apps/filament-server/src/server/tests/tests/: audit.rs  auth.rs  contract.rs  directory.rs  friend.rs  gateway.rs  guilds.rs  ip_ban.rs  profile.rs
apps/filament-server/tests/: gateway_network_flow.rs  phase2_attachments_and_markdown.rs  phase3_search.rs  phase4_roles_presence_reactions.rs  phase5_livekit_voice.rs  phase6_video_streams.rs  phase7_hierarchical_permissions.rs  postgres_phase1_flow.rs  postgres_phase3_search.rs  security_limits.rs
docs/: API.md  CLIENT_SECURITY.md  DEPLOY.md  GATEWAY_EVENTS.md  LEGAL_EXPOSURE.md  PROTOCOL.md  SECURITY.md  THREAT_MODEL.md
infra/: .env.example  Caddyfile  docker-compose.yml  livekit.yaml
plans/: EVENT_REFACTOR.md  EVENT_REFACTOR_TASK_PROMPT.md  FIXES_CONTRACT.md  IMPL_VIDEO.md  IMPROVEMENTS.md  IMPROVEMENTS_BE.md  IMPROVEMENTS_CSS.md  IMPROVEMENTS_FE.md  ITER_BE_2026-02-17_01.md  PLAN.md  PLAN_DIRECTORY.md  PLAN_E2EE.md  PLAN_EVENT.md  PLAN_FRIENDS.md  PLAN_MARKDOWN.md  PLAN_PERMISSIONS.md  PLAN_UX.md  PLAN_WEB_REFACTOR.md
(+380 files in other folders)
