[package]
name = "filament-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = "0.8"
http = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
tower = { version = "0.5", features = ["util"] }
tower_governor = "0.8"
tower-http = { version = "0.6", features = ["request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_json = "1"
