[package]
name = "filament-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lints]
workspace = true

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
filament-core = { path = "../../crates/filament-core", version = "0.1.0" }
filament-protocol = { path = "../../crates/filament-protocol", version = "0.1.0" }
futures-util = "0.3"
http = "1"
infer = "0.19"
livekit-api = { version = "0.4.13", default-features = false, features = ["access-token", "services-tokio", "rustls-tls-webpki-roots"] }
mime = "0.3"
object_store = { version = "0.13.1", default-features = false, features = ["fs"] }
pasetors = "0.7"
rand = "0.10.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio"] }
tantivy = "0.25"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time", "net", "sync"] }
tower = { version = "0.5", features = ["util"] }
tower_governor = "0.8"
tower-http = { version = "0.6", features = ["request-id", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ulid = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-tungstenite = "0.28"
